css/style.css
/* ... */
.colors {
  color: var(--main-text-color);
}
.color {
  color: var(--highlight-color);
  transition: 0.5s ease;
}
.colorBg {
  background-color: var(--highlight-color);
  transition: 0.5s ease;
}
a {
  font-size: 0px;
}
body {
  position: relative;
  overflow: hidden;
  overflow-y: scroll;
  background-color: var(--main-bg-color);
  color: var(--main-text-color);
  font-family: "Poppins", sans-serif;
}
@font-face {
  font-family: monoton;
  src: url(../fonts/Monoton-Regular.ttf);
}

#preloader {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 100vh;
  position: fixed;
  z-index: 100;
  font-family: Arial, Helvetica, sans-serif;
  background-color: var(--main-bg-color);
  color: var(--main-text-color);
  font-size: 70px;
  width: 100%;
  transition: 1s;
  top: 0px;
  left: 0px;
  opacity: 1;
}
#preloader.active {
  transform: translate(0px, -100%);
  /* opacity: 0; */
}
section {
  box-sizing: border-box;
  width: 100vw;
  height: auto;
}
.container {
  padding: 0px 50px;
}
.menuList {
  position: fixed;
  transform: translateY(-200%);
  transition: 0.5s ease;
  width: 100vw;
  height: 100vh;
  z-index: 7;
  background-color: var(--nav-bg-color);
  overflow: hidden;
}
.color-changer {
  height: auto;
  width: auto;
  display: flex;
  flex-direction: row;
  position: fixed;
  right: -150px;
  top: 40%;
  z-index: 7;
  color: black;
  transition: all 0.4s ease;
}
.color-changer.active {
  right: 0px;
}
.theme-selector-section {
  position: fixed;
  height: 45px;
  width: 45px;
  right: 0;
  top: 34%;
  z-index: 7;

  display: flex;
  flex-direction: row;
  
  border-bottom-left-radius: 3px;
  border-top-left-radius: 3px;
  background: var(--settings-bg-color);
}
.theme-selector-section span {
  height: 45px;
  width: 45px;
  padding: 5px;

  position: absolute;
  top: 0;
  left: 0;
  transition: all 0.4s ease;
}
.theme-selector-section .sun {
  opacity: 1;
  transform: scale(1) rotate(0deg);
}
.theme-selector-section .moon {
  opacity: 0;
  transform: scale(0.5) rotate(90deg);
}
.color-panel {
  height: 45px;
  cursor: pointer;
  width: 45px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-bottom-left-radius: 3px;
  border-top-left-radius: 3px;
  background: var(--settings-bg-color);
}
.color-selector {
  height: auto;
  width: 150px;
  padding: 10px;
  background: var(--settings-bg-color);
  font-family: poppins;
  font-size: 16px;
  display: flex;
  color: var(--settings-text-color);
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.color-panel svg {
  height: 40px;
  width: 40px;
  padding: 2px;
  animation: rotate 5s linear infinite;
}
.color-panel svg path {
  fill: var(--icon-color);
}

.colors ul {
  display: flex;
  flex-wrap: wrap;
  height: auto;
  max-width: 150px;
  text-align: center;
  justify-content: center;
  margin-top: 10px;
}
.colors li {
  height: 30px;
  width: 30px;
  margin: 5px;
  border-radius: 20%;
  position: relative;
  overflow: hidden;
}
.theme-selector.active{
  border: 2px solid var(--highlight-color);
}
.color-selector li {
  list-style: none;
}
.colors li a {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}
.color-red {
  background: #FF3737;
}
.color-pink {
  background: #BA487F;
}
.color-malt {
  background: #00909e;
}
.color-green {
  background: #04a777;
}
.color-blue {
  background: #739EC9;
}
.color-orange {
  background: #FA8112;
}
nav {
  z-index: 6;
}
.menuList .navigation {
  position: relative;
  padding: 25px 50px 0px 50px;
  width: 100%;
}
.navLinks {
  position: relative;
  text-align: center;
  display: grid;
}

.navLinks > ul li {
  margin: auto;
  font-size: 30px;
  width: 100%;
  padding: 15px 0px;
  display: block;
  color: var(--nav-text-color);
  /* color: rgb(255, 255, 255, 0.7); */
}
.navLinks > ul li::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  display: flex;
  justify-content: center;
  transform: translate(-50%, -50%);
  align-items: center;
  font-size: 4em;
  font-weight: 400;
  font-family: monoton;
  /* color: rgb(255, 255, 255, 0.2); */
  color: var(--nav-text-color-2);
  z-index: 1;
  pointer-events: none;
  opacity: 0;
  letter-spacing: 100px;
  transition: all 0.4s ease;
}

.navLinks ul li:hover::after {
  content: attr(data-text);
  opacity: 1;
  letter-spacing: 10px;
}
.menuList .menu {
  height: 33px;
  transition: 0.5s ease;
}
.menuList .menu:hover {
  transform: rotate(90deg);
}
.closeLine {
  position: absolute;
  top: 8px;
  left: 0px;
  transition: all.3s ease;
}
.closeLine::before,
.closeLine::after {
  position: absolute;
  top: 4px;
  left: 4px;
  content: "";
  height: 3px;
  width: 37px;
  background-color: var(--main-text-color);
  display: block;
  cursor: pointer;
  border-radius: 20px;
  transform: rotate(45deg);
}
.closeLine::after {
  transform: rotate(-45deg);
  margin: 6px 0px 0px 0px;
}

@keyframes scale {
  0% {
    transform: scale(0.6);
  }
  100% {
    transform: scale(1);
  }
}
.navigation {
  padding: 25px 50px 15px 50px;
  position: fixed;
  width: 100vw;
  box-sizing: border-box;
  overflow: hidden;
}
.nav_header {
  display: flex;
  align-items: center;
}
.logo {
  flex: 1;
}
.logo {
  flex: 1;
}
.logo img {
  width: 72px;
  transition: 0.5s;
}
.logo img:hover {
  transform: rotate(45deg);
}
.menu {
  position: relative;
  height: 27px;
  width: 50px;
  cursor: pointer;
}
.menuOpen {
  position: relative;
  right: 0px;
  width: 40px;
  height: 27px;
}
.openLine {
  position: absolute;
  width: 15px;
  height: 2px;
  background-color: var(--main-text-color);
  transition: 0.5s ease;
  right: 0px;
}
.openLine::before,
.openLine::after {
  content: "";
  position: absolute;
  top: 12px;
  right: 0px;
  width: 30px;
  height: 2px;
  background-color: var(--main-text-color);
  transition: 0.5s ease;
}
.openLine::after {
  top: 24px;
  width: 40px;
}
.menuOpen:hover .openLine {
  width: 40px;
}
/* ... */

